	impossible to process blank metadata updates.
2016-01-11 Fred Gleason <fredg@paravelsystems.com>
	* Implemented an MPEG-1/1.5 decoder in 'src/glassplayer/codec_mpeg1.cpp'
	and 'src/glassplay/codec_mpeg1.h'.
2016-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'AudioDevice' base class in 'src/common/audiodevice.cpp'
	and 'src/common/audiodevice.h'.
	* Implemented a STDOUT audio device in 'src/glassplayer/dst_stdout.cpp'
	and 'src/glassplayer/dst_stdout.h'.
2016-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Added a glassplayer(1) man page.
2016-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the '--verbose' option.
2016-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a '--stdout-format=' switch for glassplayer(1).
2016-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a FILE audio device in 'src/glassplayer/dst_file.cpp'
	and 'src/glassplayer/dst_file.h'.
2016-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented an ALSA audio device in 'src/glassplayer/dst_alsa.cpp'
	and 'src/glassplayer/dst_alsa.h'.
2016-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Changed the default audio device type from STDOUT to ALSA in
	'src/glassplayer/glassplayer.cpp'.
2016-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented channel remixing in the ALSA driver in
	'src/glassplayer/dev_alsa.cpp'.
2016-01-14 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a '--disable-stream-metadata' option.
	* Added an MPEG-1 codec in 'src/glassplayer/codec_mpeg1.cpp' and
	'src/glassplayer/codec_mpeg1.h'.
2016-01-14 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up Shoutcast error handling in
	'src/glassplayer/conn_xcast.cpp'.
2016-01-14 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/codec_mpeg1.cpp' that broke
	the build when configured without LibMad.
2016-01-14 Fred Gleason <fredg@paravelsystems.com>
	* Increased the value of CODEC_RINGBUFFER_SIZE to '33554432' in
	'src/common/codec.h'.